[package]
name = "rustls-cache-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
fastrand = "2.0.0"
num_cpus = "1.16.0"
rustls = { git = "https://github.com/rustls/rustls.git" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["full"] }
